search button and textbox added

--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -1,3 +1,6 @@
+<input class="form-control input-lg" ng-model="searchText"><br>
+<button class="btn btn-lg btn-primary" ng-click="search(searchText)">Search</button>
+<br><br>
 Number of tweets : {{numberOfTweets}}
 <br>
 Total score : {{totalScore}}
