--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -1,5 +1,7 @@
 
 <div class="btn-group">
+
+Trending :
     <span ng-repeat="trend in trends">
 
         <button type="button" class="trend btn btn-sm btn-primary" ng-click="setSearchText(trend.query)"> {{trend.name}}</button>
@@ -29,18 +31,18 @@ Total score : {{totalScore}}
 Average score : {{averageScore}}
 <hr>
 Top  Words :
-<span ng-repeat="word in allWordsAnalysis | orderBy : word.appearances | limitTo : 5">
+<span ng-repeat="word in allWordsAnalysis | orderBy : word.appearances | limitTo : 10">
     <h3 style="display: inline"> <span class="trends label label-info"> {{word.word}} </span> &nbsp;</h3>
 </span>
 <br>
 <hr>
 Top Positive Words :
-<span ng-repeat="positiveWord in sentimentalWordsAnalysis.positive | orderBy : word.appearances | limitTo : 5">
+<span ng-repeat="positiveWord in sentimentalWordsAnalysis.positive | limitTo : 8">
    <h3 style="display: inline"> <span class="trends label label-success"> {{positiveWord.word}} </span> &nbsp; </h3>
 </span>
 <hr>
 Top negative Words :
-<span ng-repeat="negativeWord in sentimentalWordsAnalysis.negative | orderBy : negativeWord.appearances | limitTo : 5">
+<span ng-repeat="negativeWord in sentimentalWordsAnalysis.negative | limitTo : 8">
     <h3 style="display: inline"> <span class="trends label label-danger"> {{negativeWord.word}} </span> &nbsp;</h3>
 </span>
 
