--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -23,27 +23,38 @@ Trending :
 </div>
 <br>
 <hr>
+<div class="row">
+    <div class="col-sm-6">Sentiment : {{sentiment}}
+        <br>
+        Number of tweets : {{numberOfTweets}}
+        <br>
+        Number of sentimental tweets : {{numberOfSentimentalTweets}}
+        <br>
+        Total score : {{totalScore}}
+        <br>
+        Average score : {{averageScore}}</div>
+    <div class="col-sm-6">
 
-Number of tweets : {{numberOfTweets}}
-<br>
-Total score : {{totalScore}}
-<br>
-Average score : {{averageScore}}
+       <h4> <i ng-class="getSentimentClass()"></i></h4>
+    </div>
+
+</div>
+
 <hr>
 Top  Words :
 <span ng-repeat="word in allWordsAnalysis | orderBy : word.appearances | limitTo : 10">
-    <h3 style="display: inline"> <span class="trends label label-info"> {{word.word}} </span> &nbsp;</h3>
+    <h3 style="display: inline"> <span class="verticalMargined label label-info"> {{word.word}} </span> &nbsp;</h3>
 </span>
 <br>
 <hr>
 Top Positive Words :
 <span ng-repeat="positiveWord in sentimentalWordsAnalysis.positive | limitTo : 8">
-   <h3 style="display: inline"> <span class="trends label label-success"> {{positiveWord.word}} </span> &nbsp; </h3>
+   <h3 style="display: inline"> <span class="verticalMargined label label-success"> {{positiveWord.word}} </span> &nbsp; </h3>
 </span>
 <hr>
 Top negative Words :
 <span ng-repeat="negativeWord in sentimentalWordsAnalysis.negative | limitTo : 8">
-    <h3 style="display: inline"> <span class="trends label label-danger"> {{negativeWord.word}} </span> &nbsp;</h3>
+    <h3 style="display: inline; margin-bottom:15px"> <span class="verticalMargined label label-danger"> {{negativeWord.word}} </span> &nbsp;</h3>
 </span>
 
 <hr>
