frontend - fixes for search by trend

--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -4,7 +4,7 @@
 Trending Globally :
     <span ng-repeat="trend in globalTrends">
 
-        <button type="button" class="trend btn btn-sm btn-default" ng-click="setSearchText(trend.name)"> {{trend.name}}</button>
+        <button type="button" class="trend btn btn-sm btn-default" ng-click="setSearchText(trend.query)"> {{trend.name}}</button>
         </span>
 
     <br>
@@ -12,7 +12,7 @@ Trending Globally :
 Trending Locally (India) :
     <span ng-repeat="trend in localTrends">
 
-        <button type="button" class="trend btn btn-sm btn-default" ng-click="setSearchText(trend.name)"> {{trend.name}}</button>
+        <button type="button" class="trend btn btn-sm btn-default" ng-click="setSearchText(trend.query)"> {{trend.name}}</button>
         </span>
 </div>
 <br><br>
