--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -55,20 +55,24 @@ Trending Locally (India) :
 
 <hr>
 Top  Words :
+<br>
 <span ng-repeat="word in tweetsData[searchText].allWordsAnalysis | orderBy : word.appearances | limitTo : 10">
-    <h3 style="display: inline"> <span class="verticalMargined label label-info"> {{word.word}} </span> &nbsp;</h3>
+    <span class="labelstyle"> <span class="label label-info verticalMargined "> {{word.word}} <sup>{{word.appearances}}</sup></span></span>
 </span>
 <br>
 <hr>
 Top Positive Words :
-<span ng-repeat="positiveWord in tweetsData[searchText].sentimentalWordsAnalysis.positive | limitTo : 8">
-   <h3 style="display: inline"> <span class="verticalMargined label label-success"> {{positiveWord.word}} </span> &nbsp; </h3>
+  <br>
+<span ng-repeat="positiveWord in tweetsData[searchText].sentimentalWordsAnalysis.positive | limitTo : 10">
+   <span class="labelstyle"> <span class="verticalMargined label label-success"> {{positiveWord.word}} <sup>{{positiveWord.appearances}}</sup></span></span>
 </span>
-<hr>
+  <br>
+  <hr>
 Top negative Words :
-<span ng-repeat="negativeWord in tweetsData[searchText].sentimentalWordsAnalysis.negative | limitTo : 8">
-    <h3 style="display: inline; margin-bottom:15px"> <span class="verticalMargined label label-danger"> {{negativeWord.word}} </span> &nbsp;</h3>
+  <br>
+<span ng-repeat="negativeWord in tweetsData[searchText].sentimentalWordsAnalysis.negative | limitTo : 10">
+    <span class="labelstyle"> <span class="verticalMargined label label-danger"> {{negativeWord.word}} <sup>{{negativeWord.appearances}}</sup></span></span>
 </span>
-
-</div>
+<br>
 <hr>
+</div>
